@@ -1,36 +1,17 @@
-# because of dotnet, we always build on amd64, and target platforms in cli
-# dotnet doesn't support QEMU for building or running. 
-# (errors common in arm/v7 32bit) https://github.com/dotnet/dotnet-docker/issues/1537
-# https://hub.docker.com/_/microsoft-dotnet
-# hadolint ignore=DL3029
-# FROM --platform=${BUILDPLATFORM} mcr.microsoft.com/dotnet/sdk:5.0 as build
-FROM  mcr.microsoft.com/dotnet/sdk:5.0 as build
-ARG TARGETPLATFORM
-ARG BUILDPLATFORM
-RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
+FROM maven:3.5-jdk-8-alpine AS build
 
-WORKDIR /source
-COPY *.csproj .
-RUN case ${TARGETPLATFORM} in \
-         "linux/amd64")  ARCH=x64  ;; \
-         "linux/arm64")  ARCH=arm64  ;; \
-         "linux/arm/v7") ARCH=arm  ;; \
-    esac \
-    && dotnet restore -r linux-${ARCH}
+WORKDIR /code
 
-COPY . .
-RUN  case ${TARGETPLATFORM} in \
-         "linux/amd64")  ARCH=x64  ;; \
-         "linux/arm64")  ARCH=arm64  ;; \
-         "linux/arm/v7") ARCH=arm  ;; \
-    esac \
-    && dotnet publish -c release -o /app -r linux-${ARCH} --self-contained false --no-restore
+COPY pom.xml /code/pom.xml
+RUN ["mvn", "dependency:resolve"]
+RUN ["mvn", "verify"]
 
-# app image
-FROM mcr.microsoft.com/dotnet/runtime:5.0
+# Adding source, compile and package into a fat jar
+COPY ["src/main", "/code/src/main"]
+RUN ["mvn", "package"]
 
-WORKDIR /app
+FROM openjdk:8-jre-alpine
 
-COPY --from=build /app .
+COPY --from=build /code/target/worker-jar-with-dependencies.jar /
 
-ENTRYPOINT ["dotnet", "Worker.dll"]
+CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/worker-jar-with-dependencies.jar"]
